--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
+<!DOCTYPE html>
 <html>
+<head>
+	<meta charset="utf-8" />
+	<title>kenjiaiko.github.io</title>
+</head>
 <body>
-hello World 2
+	<p>Hello World</p>
 </body>
 </html>
-
